--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   font-family: sans-serif;
-  background-color: #eeeeee;
+  background-color: #ffffff;
 }
 
 .file-upload {
-  background-color: #ffffff;
+  background-color: #f5dede;
   width: 600px;
   margin: 0 auto;
   padding: 20px;
