다시 페이지 정리함 달리진것 없음 2022/01/12

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   font-family: sans-serif;
-  background-color: #ffffff;
+  background-color: #eeeeee;
 }
 
 .file-upload {
-  background-color: #f5dede;
+  background-color: #ffffff;
   width: 600px;
   margin: 0 auto;
   padding: 20px;
